# math-path

./: LICENSE  README.md  pyproject.toml
src/math_path/: agent.py  cli.py
src/math_path/domain/: __init__.py  action.py  event.py  step_action.py  thread.py
src/math_path/llm/: databricks_playground.py
src/math_path/prompts/: __init__.py  from_thread.py  next_step.py  system.py  task.py
src/math_path/tools/: math.py  next_step.py
src/math_path/utils/: auth_utils.py  display_utils.py  event_utils.py  thread_utils.py  tool_utils.py
