[project]
name = "math_path"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.100.2",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]

[tool.ruff.lint]
extend-select = [
    "B",
    "C90",
    "ERA",
    "FURB",
    "I",
    "N",
    "UP",
]
